# reduced

./: Cargo.toml  README.md
examples/: reduced.json
src/: discord.rs  git.rs  mail.rs  main.rs
