[package]
name = "reduced-server"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "reduced-daemon"
path = "src/main.rs"

[[bin]]
name = "reduced"
path = "src/bin/reduced.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
daemonize = "0.5"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
